# Resti

./: Makefile  README.md  manage.py  pyproject.toml  server.py  setup.cfg
_project_/: asgi.py  settings.py  urls.py  views.py  wsgi.py
_project_/templates/: base.html  index.html
_project_/templates/_forms/: business_form.html  form.html
_project_/templates/_includes/: footer.html  nav.html
_project_/templates/businesses/: list.html
_project_/templates/users/: create.html  login.html  register.html
_project_/templates/workers/: create.html  list.html  my_worker_list.html
apps/api/: api_utils.py
apps/api/v1/: permissions.py  serializers.py  urls.py  views.py
apps/busines/: apps.py
apps/businesses/: models.py  urls.py  views.py
apps/businesses/migrations/: 0001_initial.py
apps/closing/: apps.py
apps/plans/: apps.py
apps/professions/migrations/: 0001_initial.py
apps/salary/: apps.py
apps/shifts/: apps.py
apps/type_business/: apps.py
apps/user_business/: apps.py
apps/users/: apps.py  forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/workers/: forms.py  models.py  urls.py  views.py
core/: exeptions.py  mixins.py
resti_project/: asgi.py  settings.py  urls.py  wsgi.py
src/: manage.py  server.py
src/_project_/: asgi.py  settings.py  urls.py  wsgi.py
src/_project_/templates/: base.html  index.html
src/apps/businesses/: apps.py  forms.py  models.py  views.py
src/apps/professions/: apps.py  models.py
src/apps/users/: apps.py  forms.py  models.py  urls.py  views.py
src/core/: utils.py
(+46 files in other folders)
