[tool.poetry]
name = "resti"
version = "0.1.0"
description = "Simplified CRM on Django"
authors = ["Denis <ad.way@mail.ru>", "Daniil <https://github.com/SourTyJohn>"]
readme = "README.md"
packages = [{include = "_project_"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
djangorestframework = "^3.15.2"
django-bootstrap5 = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
