[tool.poetry]
name = "resti"
version = "0.1.0"
description = "Simplified CRM on Django"
authors = ["Denis <ad.way@mail.ru>", "Daniil <https://github.com/SourTyJohn>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
djangorestframework = "^3.15.2"
django-bootstrap5 = "^24.2"
psycopg2 = "^2.9.9"
waitress = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
